# cuybot-discord

./: .breakpoints  .env  .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  gkt.json  main.py  package-lock.json  pyproject.toml  requirements.txt
api/: data_age_prediction.py  data_anime.py  data_coffee.py  data_covid.py  data_cuaca.py  data_dictionary.py  data_dota.py  data_face.py  data_football.py  data_lirik.py  data_mobile.py  data_mobilelegends.py  data_news.py  data_quote.py  data_sholat.py  data_tiktok.py  data_user_request.py  data_wallpaper.py
config/: gkt.json  liveserver.py
config/static/: commands.css  game.css  index.css  main.css  style.css  tictactoe.css
config/templates/: commands.html  game.html  index.html  tictactoe.html
games/: ucingkup.py
helper/: command_help.py  constants.py  discord.py  tictactoe.py
response/: anime.py  badutcuy.py  bot_info.py  bot_tictactoe.py  covid.py  cuaca.py  dota.py  events.py  face.py  football.py  gacha.py  help.py  lirik.py  mobile.py  mobilelegends.py  news.py  play_game.py  predict_age.py  quote.py  random_coffee.py  reputation.py  server.py  sholat.py  status.py  tiktok.py  ucingkup.py  user_request.py  username.py  wallpaper.py  welcome.py  word.py  wrmlbb.py  youtube.py
tmp/: DevToolsActivePort
tmp/Default/GPUCache/: index
tmp/Default/Local Storage/leveldb/: LOG  LOG.old
