[tool.poetry]
name = "repl_python3_cuybot"
version = "0.1.0"
description = ""
authors = ["CUYBOT Company <afrizaldea94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
gspread = "^4.0.1"
random-username = "^1.0.2"
discord-components = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
